HelloUltraviolet/Fixtures/AcceptedProjects/ExecutableMain/Source/Main.uv
//! Accepted project fixture for an executable assembly.

public procedure main(context: Context) -> i32 {
    return 0
}
