HelloUltraviolet/Fixtures/RejectedSource/Comptime/ComptimeProhibitedWait/Source/Main.uv
//! Rejected compile-time specimen for a prohibited runtime construct.

public procedure comptimeProhibitedWaitReference() -> i32 {
    comptime {
        let value: i32 = wait 1
    }
    return 0
}
